fix order of tabs in code example

--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -180,7 +180,7 @@ You can retrieve the private metadata for a user by using the [`getUser`](/docs/
   curl -XGET -H 'Authorization: CLERK_SECRET_KEY' -H "Content-type: application/json" 'https://api.clerk.com/v1/users/{user_id}'
   ```
   </Tab>
-    
+
   <Tab>
   ```ts filename="private.go"
   var client clerk.Client
@@ -211,7 +211,7 @@ Public metadata is accessible by both the frontend and the backend. This is usef
 
 ### Setting public metadata
 
-<Tabs type="framework" items={["Next.js", "Node", "cURL", "Go", "Ruby"]}>
+<Tabs type="framework" items={["Next.js", "Node", "Go", "Ruby", "cURL"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
     ```ts filename="app/route/public.ts"
@@ -333,7 +333,7 @@ The "unsafe" custom attributes can be set upon sign-up when creating or updating
 
 #### Using the Backend API
 
-<Tabs type="framework" items={["Next.js", "Node", "cURL", "Go", "Ruby"]}>
+<Tabs type="framework" items={["Next.js", "Node", "Go", "Ruby",  "cURL"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 
@@ -609,6 +609,6 @@ The "unsafe" custom attributes can be set upon sign-up when creating or updating
 
 ### Retrieving unsafe metadata
 
-There are multiple ways to retrieve unsafe metadata. It is available in the `User` object returned by the `useUser` hook, and it can also be attached to the session token to be retrieved with `auth()` or `useAuth()`. If you need to retrieve unsafe metadata frequently in the backend, the best option is to attach it to the session token and retrieve it from the session token.
+There are multiple ways to retrieve unsafe metadata. It is available in the `User` object returned by the [`useUser()`](/docs/references/react/use-user) hook. It can also be attached to a session token, which can be retrieved with the [`auth()`](/docs/references/nextjs/auth) helper in Next.js applications, or with the [`useAuth()`](/docs/references/react/use-auth) hook. If you need to retrieve unsafe metadata frequently in the backend, the best option is to attach it to the session token and retrieve it from the session token.
 
 To read about customization your session token and retrieving that data, check out our [session token customization guide](/docs/backend-requests/making/custom-session-token).
