remove src as default

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -77,10 +77,10 @@ Select your preferred router below to learn how to make this data available acro
 <Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
   <Callout type="info">
-    If you are not using `src`, the `app/layout.tsx` file will be in your root folder.
+    Your `app/layout.tsx` file should be located in the root directory, or inside the `src/` directory if you are using it.
   </Callout>
 
-  ```tsx filename="src/app/layout.tsx" {1,10-14}
+  ```tsx filename="app/layout.tsx" {1,10-14}
   import { ClerkProvider } from '@clerk/nextjs'
   import './globals.css'
 
@@ -102,10 +102,10 @@ Select your preferred router below to learn how to make this data available acro
 
   <Tab>
   <Callout type="info">
-    If you are not using `src`, the `_app.tsx` file will be in your root folder.
+    Your `pages/_app.tsx` file should be located in the root directory, or inside the `src/` directory if you are using it.
   </Callout>
 
-  ```tsx filename="src/pages/_app.tsx" {2,6-8}
+  ```tsx filename="pages/_app.tsx" {2,6-8}
     import '@/styles/globals.css'
     import { ClerkProvider } from "@clerk/nextjs/server";
     import type { AppProps } from "next/app";
@@ -125,9 +125,9 @@ Select your preferred router below to learn how to make this data available acro
 
 `clerkMiddleware()` grants you access to user authentication state throughout your application, on any route or page. It also allows you to protect specific routes from unauthenticated users. To add `clerkMiddleware()` to your application, follow these steps:
 
-1. Create a `src/middleware.ts` file. If your application does not use the `src/` directory, your `middleware.ts` file should be placed inside the root directory alongside `.env.local`.
+1. Create a `src/middleware.ts` file. Your `middleware.ts` file should be placed inside the root directory alongside `.env.local`, or inside the `src/` directory if you are using it.
 2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
-  ```tsx filename="src/middleware.ts"
+  ```tsx filename="middleware.ts"
   import { clerkMiddleware } from "@clerk/nextjs/server";
 
   export default clerkMiddleware();
