--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -76,11 +76,7 @@ Select your preferred router below to learn how to make this data available acro
 
 <Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
-  <Callout type="info">
-    If you are not using `src`, the `app/layout.tsx` file will be in your root folder.
-  </Callout>
-
-  ```tsx filename="src/app/layout.tsx" {1,10-14}
+  ```tsx filename="app/layout.tsx" {1,10-14}
   import { ClerkProvider } from '@clerk/nextjs'
   import './globals.css'
 
@@ -101,11 +97,7 @@ Select your preferred router below to learn how to make this data available acro
   </Tab>
 
   <Tab>
-  <Callout type="info">
-    If you are not using `src`, the `_app.tsx` file will be in your root folder.
-  </Callout>
-
-  ```tsx filename="src/pages/_app.tsx" {2,6-8}
+  ```tsx filename="pages/_app.tsx" {2,6-8}
     import '@/styles/globals.css'
     import { ClerkProvider } from "@clerk/nextjs/server";
     import type { AppProps } from "next/app";
@@ -125,9 +117,9 @@ Select your preferred router below to learn how to make this data available acro
 
 `clerkMiddleware()` grants you access to user authentication state throughout your application, on any route or page. It also allows you to protect specific routes from unauthenticated users. To add `clerkMiddleware()` to your application, follow these steps:
 
-1. Create a `src/middleware.ts` file. If your application does not use the `src/` directory, your `middleware.ts` file should be placed inside the root directory alongside `.env.local`.
+1. Create a `middleware.ts` file. Your `middleware.ts` file should be placed inside the root directory alongside `.env.local`, or inside the `src/` directory if you are using it.
 2. In your middleware.ts, export Clerk's `clerkMiddleware()` helper:
-  ```tsx filename="src/middleware.ts"
+  ```tsx filename="middleware.ts"
   import { clerkMiddleware } from "@clerk/nextjs/server";
 
   export default clerkMiddleware();
