fix broken links

--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -19,7 +19,7 @@ Once you have a Clerk application set up in the dashboard, it's time to create a
 
 ## Accessing the Web3 address from the frontend
 
-At this point, you should have a Next.js application integrated with Clerk and with Metamask authentication enabled. Run `npm run dev` and visit `localhost:3000`. If you followed the guide, all of the pages to your application should be protected, and you should see your sign-in page. 
+At this point, you should have a Next.js application integrated with Clerk and with Metamask authentication enabled. Run `npm run dev` and visit `localhost:3000`. If you followed the guide, all of the pages to your application should be protected, and you should see your sign-in page.
 
 After signing in with Metamask, you'll be presented with the Next.js default start screen. Let's modify the start screen to display a user's primary Web3 address on the page.
 
@@ -54,7 +54,7 @@ export default function Home() {
           Address:{" "}
           {primaryWeb3Wallet ? primaryWeb3Wallet.web3Wallet : "Not found"}
         </p>
-        <SignOutButton>
+        <SignOutButton />
       </main>
     </>
   );
