fix broken links

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -59,7 +59,7 @@ Scaffold your new React application using [Vite](https://vitejs.dev/guide/#scaff
 
 ### Install `@clerk/clerk-react`
 
-Clerk's [React SDK](/docs/references/react) gives you access to prebuilt components, hooks, and helpers for React.
+Clerk's [React SDK](/docs/references/react/overview) gives you access to prebuilt components, hooks, and helpers for React.
 
 To get started using Clerk with React, add the SDK to your project:
 
