--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -5,7 +5,7 @@ description: Learn how to authenticate or verify users with magic links.
 
 # Magic links
 
-Clerk supports passwordless [authentication with magic links](/blog/magic-links), which lets users sign in and sign up without having to remember a password. During login or registration, users will be asked to enter their email address. They will receive an email message with a link that can be clicked in order to complete the authentication process.
+Clerk supports passwordless [authentication with magic links](https://clerk.com/blog/magic-links), which lets users sign in and sign up without having to remember a password. During login or registration, users will be asked to enter their email address. They will receive an email message with a link that can be clicked in order to complete the authentication process.
 
 This one-click, link-based verification method is often referred to as a "magic link". The process is similar to sending a one-time code to your users but skipping the part where they have to come back to your app and enter the code. This is where the "magic" kicks in.
 
