Verifying sessions in Go (review) (#727)
Co-authored-by: Giannis Katsanos <gkats@fastmail.com>
Co-authored-by: Shaquil Hansford <liuqahs15@gmail.com>

--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -42,7 +42,7 @@ The following examples demonstrate both approaches.
 
 ### Usage without a client
 
-If you only use one API key, you can import the packages required for the APIs you need. Then you can execute your desired request methods as functions, such as $resource$.Get() or $resource$.Delete(). The following example demonstrates this process:
+If you only use one API key, you can import the packages required for the APIs you need. Then you can execute your desired request methods as functions, such as `$resource$.Get()` or `$resource$.Delete()`. The following example demonstrates this process:
 
 ```go
 import (
