add note to quickstart guides about the new beta

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -7,6 +7,10 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
 
+<Callout type='info' emoji='💡'>
+  The next major version of the Clerk Javascript SDK is coming soon! If you're just starting a project, consider [trying out the core 2 beta](https://beta.clerk.com/docs/quickstarts/javascript) instead.
+</Callout>
+
 <Steps>
 
 ### Install `@clerk/clerk-js` or use `<script>` tag
