--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -26,6 +26,10 @@ description: Add authentication and user management to your Next.js app with Cle
 
 </TutorialHero>
 
+<Callout type='info' emoji='💡'>
+  The next major version of the Clerk Next.js SDK is coming soon! If you're just starting a project, consider [trying out the core 2 beta](https://beta.clerk.com/docs/quickstarts/nextjs) instead.
+</Callout>
+
 <Steps>
 
 ### Install `@clerk/nextjs`
