--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -7,6 +7,10 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
 
+<Callout type='info'>
+  You're reading the quickstart guide for the **beta** of the next major version of the Javascript SDK. For more information about the changes from the current version, [check out the upgrade guide](/docs/upgrade-guides/core-2/javascript)!
+</Callout>
+
 <Steps>
 
 ### Install `@clerk/clerk-js` or use `<script>` tag
