Trimmed out clerk.com content, revised content

--- a/docs/deployments/clerk-cookies.mdx
+++ b/docs/deployments/clerk-cookies.mdx
@@ -7,60 +7,14 @@ description:
 
 ## Strictly Necessary Cookies Application Cookies
 
-Clerk will set cookies when your users interact with your Clerk powered application in order to function. These cookies are necessary for the website to function and cannot be switched off in our systems. They are usually only set in response to actions made by you which amount to a request for services, such as setting your privacy features, signing-in or filling in forms. You can set your browser to block or alert you about these cookies, but that will cause some parts of the site to not work. These cookies do not store any personally identifiable information.
+Clerk will set cookies when your users interact with your Clerk powered application in order to function. These cookies are necessary for the website to function and cannot be switched off in our systems. They are usually only set in response to actions made by the user which amount to a request for services such as signing-up or signing-in. The user could set their browser to block or alert about these cookies, but that will cause some parts of the site to not work. These cookies do not store any personally identifiable information by default. You can modify the cookie but modifying the [session token](/docs/backend-requests/resources/session-tokens) in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates). 
 
 | Cookie Subgroup | Cookies | More Information |
 | --- | --- | --- |
 | .clerk.com | `__session`, `__client_uat`  | first party |
 | .clerk.com, .dashboard.clerk.com (cloudflare) | `_cfuvid`  | third party<br />[Cloudflare Cookies](https://developers.cloudflare.com/fundamentals/reference/policies-compliances/cloudflare-cookies/) |
 
-The cookies Clerk set by default do not contain personal information. You can modify the cookie but modifying the [session token](/docs/backend-requests/resources/session-tokens) in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates). 
 
 <Callout level="warn">We encourage you to obtain legal advice on using the information here to craft your privacy policy.</Callout>
 
 
-## clerk.com Cookies
-
-The following cookies are that will be set when visiting [clerk.com](https://clerk.com) or [dashboard.clerk.com](https://dashboard.clerk.com). Your users are unlikely to interact with Clerk directly, however the following cookies may be set if they do.
-
-### Strictly Necessary Cookies
-
-These cookies are necessary for the website to function and cannot be switched off in our systems. They are usually only set in response to actions made by you which amount to a request for services, such as setting your privacy features, signing-in or filling in forms. You can set your browser to block or alert you about these cookies, but that will cause some parts of the site to not work. These cookies do not store any personally identifiable information.
-
-| Cookie Subgroup | Cookies | More Information |
-| --- | --- | --- |
-| .clerk.com | `__session`, `__client_uat`  | first party |
-| .clerk.com, .dashboard.clerk.com (stripe) | `__stripe_mid`  | third party <br />[Stripe Cookies](https://stripe.com/legal/cookies-policy) |
-| .clerk.com, .dashboard.clerk.com (segment) | `personalization_id`, `tracking_preferences`  | `third party` <br />[Sentry Cookies](https://sentry.io/privacy/#cookies-and-similar-tracking-technology) |
-| .clerk.com, .dashboard.clerk.com (cloudflare) | `_cfuvid`  | third party<br />[Cloudflare Cookies](https://developers.cloudflare.com/fundamentals/reference/policies-compliances/cloudflare-cookies/) |
-
-### Marketing and Analytics Cookies
-
-These cookies enable use to count visits and traffic sources, which is essential for measuring and enhancing the performance of our site. They provide insight into which pages are the most and least frequented and allow us to observe how visitors navigate our website. These cookies are crucial for supporting our customer service efforts and for identifying and resolving user experience issues. Without these cookies, we would lack the vital feedback needed to promptly address technical issues and to optimize your overall experience on our site. By permitting these cookies, you help us to offer you a better, more reliable online service.
-
-| Cookie Subgroup | Cookies | More Information |
-| --- | --- | --- |
-| .clerk.com (google analytics) | `_ga`, `_gcl_au`,`_ga_{unique_id}`  | To view an overview of the privacy of your Google Analytics cookies please go here: https://www.notion.so/DRAFT-Clerk-GDPR-Cookie-Policy-54c25f9ee89e49e5abcbf2aec4b1ce58?pvs=21<br />You may install a Google Analytics opt-out browser add-on by going here: https://www.notion.so/DRAFT-Clerk-GDPR-Cookie-Policy-54c25f9ee89e49e5abcbf2aec4b1ce58?pvs=21 |
-| .clerk.com (mixpanel) | `mp_*`  | third party<br />[Mixpanel Cookies](https://mixpanel.com/legal/privacy-policy) |
-| .clerk.com (hotjar) | `_hjSession_{session_id}`, `_hjSessionUser_{unique_id}`  | third party<br />[Hotjar Cookies](https://help.hotjar.com/hc/en-us/articles/6952777582999-Cookies-Set-by-the-Hotjar-Tracking-Code) |
-
-### Advertising Cookies
-
-| Cookie Subgroup | Cookies | More Information |
-| --- | --- | --- |
-| .clerk.com (twitter ads) | `metrics_token`  | third party<br />[X Cookies](https://help.twitter.com/en/rules-and-policies/x-cookies) |
-| .clerk.com (google adwords) | `_ga_{unique_id}`  | third party<br />[Google Adwords Cookies](https://business.safety.google/adscookies/) |
-
-### Third Party Website Cookies
-
-When using our website, you may be directed to other websites for such activities as surveys, to make payment, for job applications, and to view content hosted on those sites such as an embedded video or news article. These websites may use their own cookies. We do not have control over the placement of cookies by other websites you visit, even if you are directed to them from our website.
-
-### How to Control and Delete Cookies
-
-1. Using Your Browser
-    
-    Many of the cookies used on our website and through emails can be enabled or disabled through our consent tool or by disabling the cookies through your browser. To disabled cookies through your browser, follow the instructions usually located within the “Help”, “Tools” or “Edit” menus in your browser. Please note that disabling a cookie or category of cookies does not delete the cookie from your browser unless manually completed through your browser function.
-    
-2. Cookies Set in the Past
-    
-    Collection of your data from our analytics cookies can be deleted. If cookies are deleted, the information collected prior to the preference change may still be used. However, we will stop using the disabled cookie to collect any further information from your user experience. For our marketing cookie, when a user opts out of tracking, a new cookie is placed to prevent users from being tracked.
