--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -1,183 +1,268 @@
 ---
-title: Use Clerk with JavaScript
-description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
+title: JavaScript Quickstart
+description: Add authentication and user management to your JavaScript app with Clerk.
 ---
 
-# Use Clerk with JavaScript
+<TutorialHero
+  framework="javascript"
+  exampleRepo={[
+    {
+      title: "JavaScript Quickstart Repo",
+      link: "https://github.com/clerk/clerk-javascript-quickstart"
 
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
+    }
+  ]}
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk",
+    },
+  ]}
+>
 
-<Steps>
+- Add the ClerkJS SDK to your JavaScript application
+- Use Clerk components to allow users to sign in or out
 
-### Install `@clerk/clerk-js` or use `<script>` tag
+</TutorialHero>
 
-To use the ClerkJS package, you have two options:
+To add the [ClerkJS SDK](/docs/references/javascript/overview) to your JavaScript application, you have two options:
 
-1. Install the package using a package manager, like npm, yarn, or pnpm.
+1. Install the package using a package manager, like `npm`, `yarn`, or `pnpm`.
 2. Use the `<script>` tag to load the ClerkJS package from our CDN.
 
-#### Option 1: Install ClerkJS using a package manager
+Select your preferred method below to get started.
 
-At the root of your project, install the ClerkJS package using your package manager of choice:
+<Tabs items={["NPM module", "<script>"]}>
+  {/* NPM module tab */}
+  <Tab>
+    <Steps>
+      ### Install `@clerk/clerk-js`
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-  ```bash filename="terminal"
-  npm install @clerk/clerk-js
-  ```
+      You'll need to use a bundler like [Vite](https://vitejs.dev/) or [Webpack](https://webpack.js.org/) to use this method.
 
-  ```bash filename="terminal"
-  yarn add @clerk/clerk-js
-  ```
+      At the root of your project, install the ClerkJS package using your package manager of choice:
 
-  ```bash filename="terminal"
-  pnpm add @clerk/clerk-js
-  ```
-</CodeBlockTabs>
+      <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+        ```bash filename="terminal"
+        npm install @clerk/clerk-js
+        ```
 
-> You'll need to use a bundler like [Vite](https://vitejs.dev/) or [Webpack](https://webpack.js.org/) to use this method.
+        ```bash filename="terminal"
+        yarn add @clerk/clerk-js
+        ```
 
-#### Option 2: Use the `<script>` tag
+        ```bash filename="terminal"
+        pnpm add @clerk/clerk-js
+        ```
+      </CodeBlockTabs>
 
-```html
-<script>
-  // Get this URL from the Clerk Dashboard
-  const frontendApi = '[your-domain].clerk.accounts.dev';
-  const version = '@latest'; // Set to appropriate version
+      ### Set environment keys
 
-  // Creates asynchronous script
-  const script = document.createElement('script');
-  script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-  document.body.appendChild(script);
-</script>
-```
+      1. If you don't have an `.env.local` file in the root directory of your Next.js project, create one now.
+      2. Find your **Publishable Key** and **Frontend API URL**. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
+        - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
+        - Select your application, then select **🔑 API Keys** in the sidebar menu.
+        - In the **Quick Copy** section, copy your **Publishable Key**.
+        - Scroll down and select the **Advanced** dropdown to copy your **Frontend API URL**.
+      3. Add your keys to your `.env.local` file.
 
-### Set environment keys
+      The final result should look as follows:
 
-To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. Otherwise, you can find these values in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**. 
+      <InjectKeys>
 
-<InjectKeys>
+      ```sh filename=".env.local"
+      REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
+      CLERK_FRONTEND_API_URL=[your-domain].clerk.accounts.dev
+      ```
 
-```sh filename=".env.local"
-REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
-CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
-```
+      </InjectKeys>
 
-</InjectKeys>
+      ### Setup the Clerk class
 
-> We suggest storing these keys in environment variables using a `.env` file or equivalent.
+      In your JavaScript file, import the `Clerk` class and instantiate it with your **Publishable key**. Then, call the `load()` method to initialize ClerkJS.
 
-### Setup the Clerk class
+      <InjectKeys>
 
-To use the ClerkJS package, you'll need to initialize the Clerk class with your **Publishable key**.
+      ```js filename="index.ts"
+      import Clerk from '@clerk/clerk-js';
 
-<Callout type="info">
-  Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
-</Callout>
+      const clerkPublishableKey = `{{pub_key}}`;
+      const clerk = new Clerk(clerkPublishableKey);
+      await clerk.load({
+        // Set load options here...
+      });
+      ```
 
-<InjectKeys>
+      </InjectKeys>
 
-<CodeBlockTabs options={['npm Package', 'script Tag']}>
-```js filename="index.js"
-import Clerk from '@clerk/clerk-js';
+      <Callout type="info">
+        Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
+      </Callout>
 
-const clerkPublishableKey = `{{pub_key}}`;
-const clerk = new Clerk(clerkPublishableKey);
-await clerk.load({
-  // Set load options here...
-});
-```
+      ### Allow users to sign in or out
 
-```html filename="index.html"
-<script>
-  const clerkPublishableKey = `{{pub_key}}`;
-  const frontendApi = '[your-domain].clerk.accounts.dev';
-  const version = '@latest';
-  const script = document.createElement('script');
-  script.setAttribute('data-clerk-frontend-api', frontendApi);
-  script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-  script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      Clerk's [prebuilt components](/docs/components/overview) are the easiest way to add authentication and user management to your application. They come styled out of the box and are customizable to fit your application's design.
 
-  // Adds listener to initialize ClerkJS after it's loaded
-  script.addEventListener('load', async function () {
-    const clerk = window.Clerk;
-    await clerk.load({
-      // Set load options here...
-    });
-  });
-  document.body.appendChild(script);
-</script>
-```
-</CodeBlockTabs>
+      To get started,  you will use:
 
-</InjectKeys>
+      - [`<SignIn />`](/docs/references/javascript/clerk/sign-in): renders a user interface for signing in.
+      - [`<UserButton />`](/docs/references/javascript/clerk/user-button): shows the avatar from the account the user is signed in with. When clicked, it opens a dropdown menu with options to sign out.
 
-> You can configure the options for `Clerk.load` to change the behavior of ClerkJS. See the [ClerkJS reference documentation](/docs/references/javascript/clerk/clerk#load) for more information.
+      <InjectKeys>
 
-### Render a UI component
+        ```typescript filename="index.ts"
+        import Clerk from '@clerk/clerk-js';
 
-Now that you have the Clerk class set up, you can use it to render a UI component into a DOM element.
+        const clerkPublishableKey = `{{pub_key}}`;
+        const clerk = new Clerk(clerkPublishableKey);
+        await clerk.load({
+          // Set load options here...
+        });
 
-This example uses [the `<UserButton />` component](/docs/references/javascript/clerk/user-button), which will allow the user to sign in and out of our application.
+        if (clerk.user) {
+          // Selects for <div id="app"> and adds <div id="user-button">
+          document.querySelector<HTMLDivElement>("#app")!.innerHTML = `
+            <div
+              id="user-button"
+            ></div>
+          `;
 
-<Images width={496} height={564} src="/docs/images/ui-components/component-user_button.svg" alt="User Button Example" />
+          const userButtonComponent =
+            document.querySelector<HTMLDivElement>("#user-button")!;
 
-<InjectKeys>
+          clerk.mountUserButton(userButtonComponent);
+        } else {
+          // Selects for <div id="app"> and adds <div id="sign-in">
+          document.querySelector<HTMLDivElement>("#app")!.innerHTML = `
+            <div
+              id="sign-in"
+            ></div>
+          `;
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {14}
-  import Clerk from '@clerk/clerk-js';
+          const signInComponent =
+            document.querySelector<HTMLDivElement>("#sign-in")!;
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="user-button"
-    ></div>
-  `;
+          clerk.mountSignIn(signInComponent);
+        }
+        ```
 
-  const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
+        </InjectKeys>
+    </Steps>
+  </Tab>
 
-  const clerk = new Clerk(`{{pub_key}}`);
-  await clerk.load();
+  {/* <script> tag tab */}
+  <Tab>
+    <Steps>
+      ### Add the ClerkJS package using a `<script>` tag
 
-  clerk.mountUserButton(userButtonComponent);
-  ```
+      This `<script>` tag will load the ClerkJS package from our CDN and initialize it with your Clerk **Publishable Key** and **Frontend API URL**. It should *always* be placed before any other `<script>` tags that use ClerkJS.
 
-  ```html {13}
-  <div id="user-button"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+      1. Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
+      2. Select your application, then select **🔑 API Keys** in the sidebar menu.
+      3. In the **Quick Copy** section, select **JavaScript** from the dropdown menu.
+      4. Copy the `<script>` tag and paste it into your HTML file.
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      It should look something like this:
 
-      const userButtonComponent = document.querySelector('#user-button');
+      <InjectKeys>
 
-      window.Clerk.mountUserButton(userButtonComponent);
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
+      ```html filename="index.html"
+        <script
+          async
+          crossorigin="anonymous"
+          data-clerk-publishable-key={{pub_key}}
+          onload="window.Clerk.load()"
+          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@4/dist/clerk.browser.js"
+          type="text/javascript"
+        ></script>
+      ```
 
-</InjectKeys>
+      </InjectKeys>
 
-</Steps>
+      <Callout type="warning">
+        Don't forget, `<script>` tags should be placed right before the closing `</body>` tag in your HTML file.
+      </Callout>
 
+      In the `<script>` tag, the `onload` attribute is used to call the `load()` method when the ClerkJS package is loaded. This is necessary to initialize ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
 
-### Next steps
+      ### Listen for the `load` event
 
-Now that you have an application integrated with Clerk, you will want to read the following documentation:
+      After the ClerkJS package is loaded, you can listen for the `load` event to ensure that ClerkJS is ready to use.
+
+      Below the `<script>` tag that initializes ClerkJS, add another `<script>` tag to listen for the `load` event:
+
+      ```html filename="index.html"
+      <script>
+      window.addEventListener("load", async function () {
+        await window.Clerk.load();
+
+        if (window.Clerk) {
+          console.log("ClerkJS is loaded");
+        }
+      });
+      </script>
+      ```
+
+      ### Allow users to sign in or out
+
+      Clerk's [prebuilt components](/docs/components/overview) are the easiest way to add authentication and user management to your application. They come styled out of the box and are customizable to fit your application's design.
+
+      To get started, you will use:
+
+      - [`<SignIn />`](/docs/references/javascript/clerk/sign-in): renders a user interface for signing in.
+      - [`<UserButton />`](/docs/references/javascript/clerk/user-button): shows the avatar from the account the user is signed in with. When clicked, it opens a dropdown menu with options to sign out.
+
+      <InjectKeys>
+
+      ```html filename="index.html"
+      <div id="app"></div>
+
+      <script>
+        // initialize ClerkJS (see step 1)
+      </script>
+
+      <script>
+      window.addEventListener("load", async function () {
+        await window.Clerk.load();
+
+        if (window.Clerk.user) {
+          document.querySelector("#app").innerHTML = `
+            <div
+              id="user-button"
+            ></div>
+          `;
+
+          const userButtonComponent = document.getElementById("user-button");
+
+          window.Clerk.mountUserButton(userButtonComponent);
+        } else {
+          document.querySelector("#app").innerHTML = `
+            <div
+              id="sign-in"
+            ></div>
+          `;
+
+          const signInComponent = document.querySelector("#sign-in");
+
+          window.Clerk.mountSignIn(signInComponent);
+        }
+      });
+      </script>
+      ```
+
+      </InjectKeys>
+    </Steps>
+  </Tab>
+</Tabs>
+
+### More resouces
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
+    <Cards title="Clerk Class Reference" description="Learn more about the Clerk class and how to use it." link="/docs/references/javascript/clerk/clerk" cta="Learn More" />
 
     <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/references/javascript/clerk/clerk#components" cta="Learn More" />
 
-    <Cards title="Clerk Class Reference" description="Learn more about the Clerk class and how to use it." link="/docs/references/javascript/clerk/clerk" cta="Learn More" />
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
   </div>
 </div>
