chore: Fastify wip

--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -36,6 +36,7 @@ Clerk provides various middleware packages to set the session property for easy 
 - [Next.js](/docs/references/nextjs/clerk-middleware)
 - [Gatsby](/docs/backend-requests/handling/gatsby)
 - [Node.js / Express](/docs/backend-requests/handling/nodejs)
+- [Fastify](/docs/backend-requests/handling/fastify)
 - [Go](/docs/backend-requests/handling/go)
 - [Ruby on Rails / Rack](/docs/backend-requests/handling/ruby-rails)
 
