--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -116,7 +116,7 @@ Below is an example of a webhook payload for a `user.created` event:
 Clerk provides the types as part of our SDK offering. Below is an example of type usage in a webhook handler:
 
 ```tsx
-import type { WebhookEvent } from "@clerk/clerk-sdk-node"
+import type { WebhookEvent } from "@clerk/nextjs/server"
 
 const handler = req => {
   const evt = req.body.evt as WebhookEvent;
