--- a/docs/deployments/clerk-cookies.mdx
+++ b/docs/deployments/clerk-cookies.mdx
@@ -7,7 +7,12 @@ description:
 
 ## Strictly Necessary Application Cookies
 
-Clerk will set cookies when your users interact with your Clerk powered application in order to function. These cookies are necessary for the website to function and cannot be switched off in our systems. They are usually only set in response to actions made by the user which amount to a request for services such as signing-up or signing-in. The user could set their browser to block or alert about these cookies, but that will cause some parts of the site to not work. These cookies do not store any personally identifiable information by default. You can modify the cookie by modifying the [session token](/docs/backend-requests/resources/session-tokens) in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates). 
+Clerk sets cookies when your users interact with your application in ways that trigger requests for services, such as signing in or signing up. This cannot be disabled.
+
+These cookies:
+- Are required for Clerk to function, and should not be blocked by you or your users.
+- Do not store any personally identifiable information by default.
+- Can be configured by modifying the [session token](/docs/backend-requests/resources/session-tokens) in your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates). 
 
 | Cookie Subgroup | Cookies | More Information |
 | --- | --- | --- |
