--- a/docs/deployments/clerk-cookies.mdx
+++ b/docs/deployments/clerk-cookies.mdx
@@ -20,6 +20,6 @@ These cookies:
 | .clerk.com, .dashboard.clerk.com (cloudflare) | `_cfuvid`  | third party<br />[Cloudflare Cookies](https://developers.cloudflare.com/fundamentals/reference/policies-compliances/cloudflare-cookies/) |
 
 
-<Callout level="warn">We encourage you to obtain legal advice on using the information here to craft your privacy policy.</Callout>
+<Callout level="warn">You should seek legal advice before using this information to craft your privacy policy.</Callout>
 
 
