--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -41,6 +41,9 @@ import { auth } from '@clerk/nextjs/server'
 export default function Page() {
 
   if (!auth().userId) {
+    // This is an opinitonated auth check
+    // If the user is not logged in they will be redirected to the sign-in route
+    // If the user is logged in they can view the route
     return auth().protect()
   }
 
@@ -128,13 +131,12 @@ You can use `auth().protect()` or the `userId` your Route Handlers or Server act
 
 <CodeBlockTabs type="router" options={["auth().protect()", "auth().userId()"]}>
 
-```tsx filename="/app/api/dashboard/route.ts 
+```tsx filename="/app/api/dashboard/route.ts"
 import { auth } from "@clerk/nextjs/server";
 
 export async function GET() {
-  console.log('FETCH')
 
-  // If there is no signed in user, this 
+  // If there is no signed in user, this will return an error
   auth().protect()
 
   // Perform your Route Handler logic here
@@ -156,7 +158,6 @@ export async function GET() {
   // Perform your Route Handler logic here
 
   return Response.json({ userId: userId })
-
 }
 ```
 </CodeBlockTabs>
@@ -165,9 +166,9 @@ export async function GET() {
 
 ### Protect a page
 
-You can use a `layout.tsx` file to protect the entire route, including all children. The following example would protect the entire `/dashboard` and require users to be signed into the application to access the route.  You can protect a specific page using our auth() and its helper methods. 
+You can protect a page using [`getServerSideProps`](https://nextjs.org/docs/pages/building-your-application/data-fetching/get-server-side-props) when using Server Side Rendering or with [`useAuth()`](/docs/references/react/use-auth) from the client eide. 
 
-<CodeBlockTabs type="router" options={["getServerSideProps", "Client side"]}>
+<CodeBlockTabs type="router" options={["Server Side Rendered", "Client side"]}>
 
 ```tsx filename="app/subscribe/page.tsx" 
 import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
@@ -224,31 +225,13 @@ export default function Page() {
 ```
 </CodeBlockTabs>
 
-### Protect your application with _app.tsx
-
-The following will require users to be logged in to access the `/dashboard` route, and if they are not it will redirect to sign the sign-in route.
-
-```tsx filename="middleware.ts"
-import { clerkMiddleware } from '@clerk/nextjs/server';
-
-export default clerkMiddleware(
-  (auth, req) => {
-    if ( req.nextUrl.pathname.startsWith('/dashboard')) {
-      auth().protect();
-    }
-  }
-);
-
-export const config = {
-  matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
-};
-```
-
-
 
 ## Protect your application with Middleware
 
 You an protect your routes in Middleware using [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware). `clerkMiddleware()` allows you select the routes you want to protect, and how you want to protect them. The example below is just protecting one route, but you can protect many routes.
+
+This is just a simple example of `clerkMiddleware()`. Please see the clerkMiddleware documentation for detailed information on the options and configurations available.
+
 
 ```tsx filename="middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server';
