(wip) Updated permission name being checked

--- a/docs/references/nextjs/route-protection-requiring-authorization.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authorization.mdx
@@ -26,7 +26,7 @@ export default async function Layout({
 }: {
   children: React.ReactNode;
 }) {
-  auth().protect({ permission: "org:test:permission" })
+  auth().protect({ permission: "org:sys_memberships:manage" })
   return (
     <div>{children}</div>
   )
@@ -55,7 +55,7 @@ import { auth } from "@clerk/nextjs/server"
 
 export default function Page() {
 
-  auth().protect({ permission: "org:test:permission" })
+  auth().protect({ permission: "org:sys_memberships:manage" })
 
   return (
     <p>This is a page</p>
@@ -92,7 +92,7 @@ import { auth } from "@clerk/nextjs/server";
 export async function GET() {
 
   // If there is no signed in user, this will return an error
-  auth().protect({ permission: "org:test:permission" })
+  auth().protect({ permission: "org:sys_memberships:manage" })
 
   // Perform your Route Handler logic here
 
@@ -146,11 +146,10 @@ const isProtectedRoute = createRouteMatcher([
 ]);
 
 export default clerkMiddleware((auth, req) => {
-  // Restricted to users with the org:test:permission'
+  // Restricted to users with the org:sys_memberships:manage'
   // Logged out users will be redirected to sign-in route
   if (isProtectedRoute(req)) {
-    console.log('test', auth().protect({ permission: "org:test:permission" }))
-    auth().protect()
+    auth().protect({ permission: "org:sys_memberships:manage" })
   }
 }
 
