working on editing route protection guides

--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -1,11 +1,11 @@
 ---
-title: Requiring Authentication for Route protection | Next.js
+title: Requiring Authentication for route protection | Next.js
 description: Learn how to protect the routes in your Next.js application that require authentication.
 ---
 
-# Requiring Authenication for Route protection 
+# Requiring Authenication for route protection
 
-Whether you're in the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [Auth](/docs/references/nextjs/authentication-object) object that you can use to require authentication throughout your application. Below, we explain how to access and use the Auth object.
+Whether you're using the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [`auth()`](/docs/references/nextjs/authentication-object) object that you can use to access authentication details throughout your application. You can find details below on how to access and use the `auth()` object.
 
 If you want to learn about protecting routes based on [organization](/docs/organizations/overview) roles or permissions, see the [requiring authorization](/docs/references/nextjs/route-protection-requiring-authorization) guide.
 
@@ -13,7 +13,7 @@ If you want to learn about protecting routes based on [organization](/docs/organ
 
 ### Protect a layout or page
 
-You can use a `layout.tsx` file to protect the entire route, including all children. You can also protect a specific page using our auth() and its helper methods. The following examples would protect the route or page and require the user to be logged into the application.
+You can protect an entire route including all its children by using Clerk helpers in a `layout.tsx` file. You can also protect a specific page using the `auth()` function and its helper methods. The following examples would require the user to be logged into the application to access a route or page.
 
 
 <CodeBlockTabs type="router" options={["app/dashboard/layout.tsx", "app/subscribe/page.tsx"]}>
@@ -25,9 +25,8 @@ export default async function Layout(
   { children }:
     { children: React.ReactNode }
 ) {
-  // This is an opinitonated auth check
   // If the user is not logged in they will be redirected to the sign-in route
-  // If the user is logged in they can view the route
+  // If the user is logged in they can view the content
   auth().protect()
 
   return <>{children}</>
@@ -41,7 +40,6 @@ import { auth } from '@clerk/nextjs/server'
 export default function Page() {
 
   if (!auth().userId) {
-    // This is an opinitonated auth check
     // If the user is not logged in they will be redirected to the sign-in route
     // If the user is logged in they can view the route
     return auth().protect()
